配置文件位置统一存放
尝试修复积分不一致问题

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,8 @@ __pycache__
 cardpool
 *config.py
 .DS_Store
-test/test-repo
+
+db/config-demo.py
+lottery/configs/config-demo.py
+bot/config-demo.py
+modian/configs/ModianConfig-demo.py
